# klartext

./: CMakeLists.txt  test.txt  vcpkg.json
include/klartext/: api_client.hpp
src/: api_client.cpp  main.cpp
